<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TitanTrack</string>

    <!--    Login -->
    <string name="login_titulo">Bienvenido a TitanTrack</string>
    <string name="login_email_hint">Correo electrónico</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_boton">Iniciar sesión</string>
    <string name="login_enlace_registro">¿No tienes cuenta? Regístrate</string>

    <!-- Registro -->
    <string name="registro_titulo">Crea tu cuenta</string>
    <string name="registro_nombre_hint">Nombre completo</string>
    <string name="registro_email_hint">Correo electrónico</string>
    <string name="registro_password_hint">Contraseña</string>
    <string name="registro_confirmar_password_hint">Confirmar contraseña</string>
    <string name="registro_boton">Registrarse</string>
    <string name="registro_enlace_login">¿Ya tienes cuenta? Inicia sesión</string>

    <!-- Dashboard - Navegación -->
    <string name="nav_inicio">Inicio</string>
    <string name="nav_entrenos">Entrenos</string>
    <string name="nav_progreso">Progreso</string>
    <string name="nav_perfil">Perfil</string>
    <string name="entrenos_titulo">Entrenos</string>
    <string name="entrenos_subtitulo">Explora los ejercicios y elige tu próxima rutina.</string>
</resources>